2002-10-29  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libsql/parser.y: a couple of fixes to make bison not to complain.

2002-10-28  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #95985

	* configure.in: libmystrings is not needed for MySQL provider.

2002-10-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/interbase/gda-interbase-provider.c
	(gda_interbase_connection_make_error): new function.
	(gda_interbase_command_get_transaction): new function.
	(gda_interbase_provider_open_connection): call the above function for
	any database-related errors.
	(gda_interbase_provider_create_database): implemented.

	* providers/interbase/gda-interbase-recordset.[ch]: recordset
	implementation for the Interbase provider.

2002-10-25  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #96758
	
	* libgda/Makefile.am: moved top_srcdir to the top in INCLUDES.

2002-10-23  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.8.199

2002-10-23  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.c:
	fixed dlopen() bug which made loading the provider fail with freetds
	0.6x

	* configure.in: Removed freetds v0.60 warning

2002-10-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/interbase/Makefile.am:
	* providers/interbase/gda-interbase-provider.[ch]:
	* providers/interbase/libmain.c: started GNOME 2 version of the
	Interbase provider.

	* providers/gda-oracle-provider.c (gda_oracle_provider_get_version):
	(gda_oracle_provider_get_server_version): implemented missing methods.

2002-10-13  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.h: added TDS_CONTEXT (v0.60)
	to GdaFreeTDSConnectionData struct
	
	* providers/freetds/gda-freetds-provider.c: added v0.60 api,
	fixed compile warnings (unused enums vals in switches),
	fixed change_database to work within connection_open(),
	corrected typecast in execute_cmd(),
	completed error messages in internal execute_cmd()
	